--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 group 'org.hhmi.janelia'
-version '1.0'
-
+version '1.1.0.SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
@@ -106,18 +105,34 @@ dependencies {
     compile group: 'org.janelia', name: 'jacs-model', version: '1.1.0.SNAPSHOT'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.0.0'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-base', version: '2.5.4'
-    compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.5.4'
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.6'
-    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '2.6'
+
+    project.ext {
+        JACKSON_VERSION = '2.9.5'
+	JERSEY_VERSION = "2.27"
+    }
+
+    // Jackson deps
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${JACKSON_VERSION}"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: "${JACKSON_VERSION}"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${JACKSON_VERSION}"
+    compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-base', version: "${JACKSON_VERSION}"
+    compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: "${JACKSON_VERSION}"
+
     compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
+
+    // Jersey deps
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: "${JERSEY_VERSION}"
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: "${JERSEY_VERSION}"
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: "${JERSEY_VERSION}"
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: "${JERSEY_VERSION}"
+    compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: "${JERSEY_VERSION}"
+
     compile group: 'com.sun.media', name: 'jai-codec', version: '1.1.3'
     compile group: 'javax.media', name: 'jai-core', version: '1.1.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
     compile group: 'org.komamitsu', name: 'jackson-dataformat-msgpack', version: '0.0.3'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
     compile group: 'org.glassfish.jersey.connectors', name: 'jersey-apache-connector', version: '2.22'
-
 
 }
 
