--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-group 'org.hhmi.janelia'
-version '1.0'
-
-
-apply plugin: 'groovy'
-apply plugin: 'java'
-apply plugin: 'maven-publish'
 buildscript {
     repositories {
         jcenter()
@@ -13,6 +6,17 @@ buildscript {
         classpath 'org.hidetake:gradle-ssh-plugin:2.9.0'
     }
 }
+
+plugins {
+    id "com.github.hierynomus.license" version "0.15.0"
+}
+
+group 'org.hhmi.janelia'
+version '1.0'
+
+apply plugin: 'groovy'
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 apply plugin: 'org.hidetake.ssh'
 
 remotes {
@@ -175,3 +179,9 @@ artifacts {
     archives brokerJar
     archives neuronGenerationJar
 }
+
+downloadLicenses {
+	includeProjectDependencies = true
+	dependencyConfiguration = 'compile'
+}
+
