--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,24 +11,28 @@ jobs:
     docker:
       - image: circleci/openjdk:8u171-jdk
 
+    environment:
+      TERM: dumb
+
     steps:
 
       - checkout
 
       - restore_cache:
-          key: jacs-messaging-{{ checksum "build.gradle" }}
-      
-      - run: gradle jar test
+          keys: 
+            - jacs-messaging-c1-{{ checksum "build.gradle" }}
+            - jacs-messaging-c1-
+
+      - run: gradle --no-daemon dependencies
       
       - save_cache:
-          key: jacs-messaging-{{ checksum "build.gradle" }}
+          key: jacs-messaging-c1-{{ checksum "build.gradle" }}
           paths:
             - ~/.gradle
+
+      - run: gradle --no-daemon jar test
 
       - store_test_results:
           paths: 
             - build/test-results/test
       
-      - store_artifacts:
-          path: build/libs/*.jar
-
