--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'org.hidetake.ssh'
 
-group 'org.janelia.messaging'
+group 'org.janelia.jacs-messaging'
 version '1.1.0'
 
 remotes {
@@ -66,7 +66,14 @@ task brokerJar(type: Jar) {
                 'Main-Class': 'org.janelia.messaging.broker.sharedworkspace.NeuronBroker'
     }
     baseName = 'sharedWorkspaceBroker'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compile.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+        configurations.runtime.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+    }
     with jar
 }
 
@@ -77,7 +84,14 @@ task neuronGenerationJar(type: Jar) {
                 'Main-Class': 'org.janelia.messaging.utility.bot.neurongenerator.NeuronGenerationBot'
     }
     baseName = 'NeuronGenerationBot'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compile.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+        configurations.runtime.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+    }
     with jar
 }
 
@@ -88,7 +102,14 @@ task queueBackupQueryJar(type: Jar) {
                 'Main-Class': 'org.janelia.messaging.utility.BackupQueueDownload'
     }
     baseName = 'UserRecovery'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compile.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+        configurations.runtime.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+    }
     with jar
 }
 
@@ -99,7 +120,14 @@ task userRecoveryJar(type: Jar) {
                 'Main-Class': 'org.janelia.messaging.utility.NeuronRecoveryUtility'
     }
     baseName = 'NeuronRecoveryUtility'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.compile.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+        configurations.runtime.collect {
+	    it.isDirectory() ? it : zipTree(it)
+	}
+    }
     with jar
 }
 
@@ -118,6 +146,7 @@ dependencies {
     project.ext {
         JACKSON_VERSION = '2.9.5'
         JERSEY_VERSION = "2.27"
+        SLF4J_VERSION = "1.7.26"
     }
 
     // Jackson deps
@@ -138,11 +167,12 @@ dependencies {
 
     compile group: 'com.sun.media', name: 'jai-codec', version: '1.1.3'
     compile group: 'javax.media', name: 'jai-core', version: '1.1.3'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.10.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: "${SLF4J_VERSION}"
     compile group: 'org.komamitsu', name: 'jackson-dataformat-msgpack', version: '0.0.3'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
     compile group: 'org.glassfish.jersey.connectors', name: 'jersey-apache-connector', version: '2.22'
 
+    runtime group: 'org.slf4j', name: 'slf4j-log4j12', version: "${SLF4J_VERSION}"
 }
 
 task startRabbit {
