--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 allprojects {
     apply plugin: 'java-library'
+    apply plugin: 'groovy'
     apply plugin: 'maven-publish'
     group = 'org.janelia.jacs-messaging'
     version = '2.0.0-SNAPSHOT'
