--- a/deps.gradle
+++ b/deps.gradle
@@ -44,7 +44,10 @@ dependencies {
 
         // testing
         JUNIT_LIB = "junit:junit:4.12"
-        SPOCK_LIB = "org.spockframework:spock-core:1.0-groovy-2.3"
+        GROOVY_LIB = "org.codehaus.groovy:groovy-all:2.5.6"
+        SPOCK_LIB = "org.spockframework:spock-core:1.3-groovy-2.5"
+        CGI_LIB = "cglib:cglib-nodep:3.2.11"
+        OBJGENESIS_LIB = "org.objenesis:objenesis:3.0.1"
     }
 
     // Included in the implementation of ALL projects
@@ -53,6 +56,9 @@ dependencies {
                    SLF4J_LIB,
                    SLF4J_LOG4J_LIB
 
-    testImplementation JUNIT_LIB,
+    testImplementation CGI_LIB,
+                       GROOVY_LIB,
+                       JUNIT_LIB,
+                       OBJGENESIS_LIB,
                        SPOCK_LIB
 }
