renamed the neuronbroker module to simply broker since it can support any adapter; maven publishing support

--- a/jacs-messaging-broker/build.gradle
+++ b/jacs-messaging-broker/build.gradle
@@ -1,4 +1,4 @@
-project(":jacs-messaging-neuronbroker") {
+project(":jacs-messaging-broker") {
     dependencies {
         implementation project(":jacs-messaging-core"),
                        CMDLINE_ARG_LIB,
