--- a/build.gradle
+++ b/build.gradle
@@ -46,10 +46,42 @@ subprojects {
             }
         }
 
+        task sourceJar(type: Jar) {
+            from sourceSets.main.allJava
+            archiveClassifier = 'sources'
+        }
+
+        publishing {
+            publications {
+                mavenJar(MavenPublication) {
+                    from components.java
+                    artifact sourceJar
+                }
+            }
+            ext {
+                if (!project.hasProperty('mavenRepoUser')) {
+                    mavenRepoUser = ''
+                }
+                if (!project.hasProperty('mavenRepoPassword')) {
+                    mavenRepoPassword = ''
+                }
+            }
+            repositories {
+                maven {
+                    def releasesRepoUrl = 'https://nexus.janelia.org/repository/maven-releases'
+                    def snapshotsRepoUrl = 'https://nexus.janelia.org/repository/maven-snapshots'
+                    url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                    credentials {
+                        username "${mavenRepoUser}"
+                        password "${mavenRepoPassword}"
+                    }
+                }
+            }
+        }
+
     }
 
 }
-
 
 license {
     header rootProject.file('LICENSE.md')
