--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'jacs-messaging'
 
 include 'jacs-messaging-core'
-include 'jacs-messaging-neuronbroker'
+include 'jacs-messaging-broker'
