--- a/deps.gradle
+++ b/deps.gradle
@@ -3,7 +3,9 @@ dependencies {
         // logging
         SLF4J_VERSION = "1.7.26"
         SLF4J_LIB = "org.slf4j:slf4j-api:${SLF4J_VERSION}"
-        SLF4J_LOG4J_LIB = "org.slf4j:slf4j-log4j12:${SLF4J_VERSION}"
+        LOGBACK_VERSION = "1.2.3"
+        LOGBACK_CORE_LIB = "ch.qos.logback:logback-core:${LOGBACK_VERSION}"
+        LOGBACK_CLASSIC_LIB = "ch.qos.logback:logback-classic:${LOGBACK_VERSION}"
 
         CMDLINE_ARG_LIB = "com.beust:jcommander:1.72"
 
@@ -54,8 +56,9 @@ dependencies {
     // Included in the implementation of ALL projects
     implementation COMMONS_LANG_LIB,
                    GUAVA_LIB,
-                   SLF4J_LIB,
-                   SLF4J_LOG4J_LIB
+                   LOGBACK_CLASSIC_LIB,
+                   LOGBACK_CORE_LIB,
+                   SLF4J_LIB
 
     testImplementation CGI_LIB,
                        GROOVY_LIB,
