--- a/deps.gradle
+++ b/deps.gradle
@@ -27,7 +27,7 @@ dependencies {
         JACKSON_JAXRS_JSON_PROVIDER = "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${JACKSON_VERSION}"
 
         // Janelia libraries
-        JACS_MODEL_VERSION = "2.0.2"
+        JACS_MODEL_VERSION = "2.1.0-SNAPSHOT"
         JACS_MODEL_CORE_LIB = "org.janelia.jacs-model:jacs-model-core:${JACS_MODEL_VERSION}"
 
         // JAX-RS API
@@ -44,6 +44,10 @@ dependencies {
         // codecs
         JAI_CORE_LIB = "javax.media:jai-core:1.1.3"
         JAI_CODEC_LIB = "com.sun.media:jai-codec:1.1.3"
+
+        // search
+        SOLR_VERSION = "3.6.2"
+        SOLR_SEARCH_LIB = "org.apache.solr:solr-solrj:${SOLR_VERSION}"
 
         // testing
         JUNIT_LIB = "junit:junit:4.12"
