--- a/jacs-messaging-broker/build.gradle
+++ b/jacs-messaging-broker/build.gradle
@@ -18,7 +18,8 @@ project(":jacs-messaging-broker") {
                        JAX_RS_JERSEY_CLIENT_LIB,
                        JAX_RS_JERSEY_APACHE_CONNECTOR_LIB,
                        JAX_RS_JERSEY_MEDIA_JSON_LIB,
-                       JAX_RS_JERSEY_MEDIA_LIB
+                       JAX_RS_JERSEY_MEDIA_LIB,
+                       SOLR_SEARCH_LIB
     }
 
 }
