logging changes and made adapter name available in the adapter

--- a/jacs-messaging-broker/src/main/resources/jacsbroker.properties
+++ b/jacs-messaging-broker/src/main/resources/jacsbroker.properties
@@ -1,7 +1,7 @@
-jacs-sync-host=localhost:8800
+jacs-sync-host=jacs-sync:8080
 jacs-sync-url=http://{jacs-sync-host}/api/rest-v2/
 
-# Neuron broker
+# Neuron adapter configuration
 neuronBroker.receiveQueue=UpdatesProcessor
 neuronBroker.successResponseQueue=ModelRefresh
 neuronBroker.successResponseRouting=
@@ -13,6 +13,7 @@ neuronBroker.backupIntervalInMillis=86400000
 neuronBroker.persistenceServer={jacs-sync-url}
 neuronBroker.sharedSpaceOwner=group:mouselight
 
+# Indexing adapter configuration
 indexingBroker.receiveQueue=IndexingProcessor
 indexingBroker.successResponseQueue=DocIndexRefresh
 indexingBroker.successResponseRouting=
