--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
     apply plugin: 'groovy'
     apply plugin: 'maven-publish'
     group = 'org.janelia.jacs-messaging'
-    version = '2.0.0-SNAPSHOT'
+    version = '2.0.0'
 }
 
 subprojects {
