--- a/jacs-messaging-broker/build.gradle
+++ b/jacs-messaging-broker/build.gradle
@@ -14,6 +14,7 @@ project(":jacs-messaging-broker") {
                        CMDLINE_ARG_LIB,
                        JACKSON_DATABIND_LIB,
                        JACKSON_JAXRS_JSON_PROVIDER,
+                       JACS_MODEL_ACCESS_LIB,
                        JACS_MODEL_CORE_LIB,
                        JAI_CORE_LIB,
                        JAI_CODEC_LIB,
