--- a/jacs-messaging-broker/src/main/resources/jacsbroker.properties
+++ b/jacs-messaging-broker/src/main/resources/jacsbroker.properties
@@ -1,6 +1,9 @@
 jacs-sync-host=jacs-sync:8080
 jacs-sync-url=http://{jacs-sync-host}/api/rest-v2/
 
+connection.maxRetries=-1
+connection.pauseBetweenRetriesInMillis=10000
+
 # Neuron adapter configuration
 neuronBroker.receiveQueue=UpdatesProcessor
 neuronBroker.successResponseQueue=ModelRefresh
