support for jacs API key

--- a/jacs-messaging-broker/src/main/resources/jacsbroker.properties
+++ b/jacs-messaging-broker/src/main/resources/jacsbroker.properties
@@ -1,5 +1,6 @@
 jacs-sync-host=jacs-sync:8080
 jacs-sync-url=http://{jacs-sync-host}/api/rest-v2/
+jacs-api-key=
 
 connection.maxRetries=-1
 connection.pauseBetweenRetriesInMillis=10000
@@ -14,6 +15,7 @@ neuronBroker.backupQueue=ClientRefresh
 neuronBroker.backupLocation=
 neuronBroker.backupIntervalInMillis=86400000
 neuronBroker.persistenceServer={jacs-sync-url}
+neuronBroker.persistenceApiKey=
 neuronBroker.sharedSpaceOwner=group:mouselight
 
 # Indexing adapter configuration
@@ -24,3 +26,4 @@ indexingBroker.backupQueue=IndexingRequests
 indexingBroker.backupLocation=
 indexingBroker.backupIntervalInMillis=86400000
 indexingBroker.indexingServer={jacs-sync-url}
+indexingBroker.indexingApiKey={jacs-api-key}
