--- a/jacs-messaging-broker/src/main/resources/jacsbroker.properties
+++ b/jacs-messaging-broker/src/main/resources/jacsbroker.properties
@@ -1,6 +1,6 @@
-jacs-sync-host=jacs-sync:8080
-jacs-sync-url=http://{jacs-sync-host}/api/rest-v2/
-jacs-api-key=
+jacs.sync.host=jacs-sync:8080
+jacs.sync.url=http://{jacs.sync.host}/api/rest-v2/
+jacs.api.key=
 
 connection.maxRetries=-1
 connection.pauseBetweenRetriesInMillis=10000
@@ -14,7 +14,7 @@ neuronBroker.errorResponseRouting=
 neuronBroker.backupQueue=ClientRefresh
 neuronBroker.backupLocation=
 neuronBroker.backupIntervalInMillis=86400000
-neuronBroker.persistenceServer={jacs-sync-url}
+neuronBroker.persistenceServer={jacs.sync.url}
 neuronBroker.persistenceApiKey=
 neuronBroker.sharedSpaceOwner=group:mouselight
 
@@ -25,5 +25,5 @@ indexingBroker.successResponseRouting=
 indexingBroker.backupQueue=IndexingRequests
 indexingBroker.backupLocation=
 indexingBroker.backupIntervalInMillis=86400000
-indexingBroker.indexingServer={jacs-sync-url}
-indexingBroker.indexingApiKey={jacs-api-key}
+indexingBroker.indexingServer={jacs.sync.url}
+indexingBroker.indexingApiKey={jacs.api.key}
