--- a/jacs-messaging-broker/build.gradle
+++ b/jacs-messaging-broker/build.gradle
@@ -4,13 +4,20 @@ buildscript {
     }
     dependencies {
         classpath 'org.hidetake:gradle-ssh-plugin:2.2.0'
+        classpath 'com.gradleup.shadow:shadow-gradle-plugin:8.3.5'
     }
 }
 
-project(":jacs-messaging-broker") {
+plugins {
+    id 'application'
+    id 'org.hidetake.ssh' version '2.2.0'
+    id 'com.gradleup.shadow' version '8.3.5'
+}
+
+project(':jacs-messaging-broker') {
 
     dependencies {
-        implementation project(":jacs-messaging-core"),
+        implementation project(':jacs-messaging-core'),
                        CMDLINE_ARG_LIB,
                        JACKSON_DATABIND_LIB,
                        JACKSON_JAXRS_JSON_PROVIDER,
@@ -29,8 +36,6 @@ project(":jacs-messaging-broker") {
 
 }
 
-apply plugin: 'org.hidetake.ssh'
-
 remotes {
     messageServer {
         role('messageServer')
@@ -42,54 +47,58 @@ remotes {
 
 def neuronBrokerBaseName = "sharedWorkspaceBroker"
 
-task brokerJar(type: Jar, dependsOn: ':jacs-messaging-core:jar') {
+tasks.register('brokerJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     archiveVersion = "${project.version}"
     archiveBaseName = "${neuronBrokerBaseName}"
+
     manifest {
         attributes 'Implementation-Title': 'Shared Workspace Broker',
-                   'Implementation-Version': archiveVersion.get(),
+                   'Implementation-Version': archiveVersion,
                    'Main-Class': 'org.janelia.messaging.broker.MessageBroker'
     }
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-    with jar
+
+    from project.jar.outputs.files
+
+    configurations = [
+            project.configurations.runtimeClasspath
+    ]
 }
 
-task queueBackupJar(type: Jar, dependsOn: ':jacs-messaging-core:jar') {
+tasks.register('queueBackupJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     archiveVersion = "${project.version}"
     archiveBaseName = "queueBackup"
+
     manifest {
         attributes 'Implementation-Title': 'Shared Workspace Backup',
-                   'Implementation-Version': archiveVersion.get(),
+                   'Implementation-Version': archiveVersion,
                    'Main-Class': 'org.janelia.messaging.tools.QueueBackupTool'
     }
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-    with jar
+
+    from project.jar.outputs.files
+
+    configurations = [
+            project.configurations.runtimeClasspath
+    ]
 }
 
-task neuronRecoveryJar(type: Jar, dependsOn: ':jacs-messaging-core:jar') {
+tasks.register('neuronRecoveryJar',  com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+    archiveVersion = "${project.version}"
+    archiveBaseName = "neuronRecovery"
+
     manifest {
-        attributes 'Implementation-Title': 'Shared Workspace Backup',
-                   'Implementation-Version': archiveVersion.get(),
+        attributes 'Implementation-Title': 'Shared Workspace Recovery Tool',
+                   'Implementation-Version': archiveVersion,
                    'Main-Class': 'org.janelia.messaging.tools.NeuronRecoveryTool'
     }
-    archiveBaseName = "neuronRecovery"
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-    with jar
+
+    from project.jar.outputs.files
+
+    configurations = [
+            project.configurations.runtimeClasspath
+    ]
 }
 
-task startRabbit {
+tasks.register('startRabbit') {
     doLast {
         ssh.run {
             session(remotes.role('messageServer')) {
@@ -99,7 +108,7 @@ task startRabbit {
     }
 }
 
-task stopRabbit {
+tasks.register('stopRabbit') {
     doLast {
         ssh.run {
             session(remotes.role('messageServer')) {
@@ -122,7 +131,9 @@ def neuronBrokerOptions = [
         backupLocation: '/opt/neuronBroker/backup/backupQueue'
 ]
 
-task deployNeuronBroker (dependsOn: brokerJar) {
+tasks.register('deployNeuronBroker') {
+    dependsOn(brokerJar)
+
     def neuronBrokerJar = "${neuronBrokerBaseName}-${version}.jar"
     def targetLoc = "/opt/neuronBroker/${neuronBrokerJar}"
 
@@ -145,7 +156,9 @@ task deployNeuronBroker (dependsOn: brokerJar) {
     }
 }
 
-task stopNeuronBroker (dependsOn: brokerJar) {
+tasks.register('stopNeuronBroker') {
+    dependsOn(brokerJar)
+
     doLast {
         ssh.run {
             session(remotes.role('messageServer')) {
